@@ -41,6 +41,7 @@ Views 6.x-3.x-dev
     o #552498 by dereine: User email as an argument.
     o #515324 by dereine: Make API documentation easier to find.
     o #640862 by dereine: Properly clear feed icon when cloning a view to prevent duplicate feed icons in attachments.
+    o #672044 by moshebeeri: Right-To-Left for views.css.
 
 Views 6.x-3.0-alpha2
     o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
